<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/pedidos_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="8dp"
            android:paddingBottom="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pedidos_list"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:orientation="vertical" />
            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pedidos_anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="6dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/btn_back"
            app:srcCompat="@drawable/ic_left" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pedidos_proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="6dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/btn_next"
            app:srcCompat="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pedido_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="6dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/btn_plus"
            app:srcCompat="@drawable/ic_plus" />
    </LinearLayout>
</RelativeLayout>